Add texts and fine tune responsivenes

--- a/public/404.html
+++ b/public/404.html
@@ -3,7 +3,7 @@
     <title>Oops, page not found!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="./css/main.8e9a29d6.css">
+    <link rel="stylesheet" type="text/css" href="./css/main.ed8a4fe9.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
   
     <link rel="apple-touch-icon" sizes="57x57" href="./img/favicons/apple-icon-57x57.png">
@@ -25,8 +25,9 @@
     
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Skåne Lag" />
-    <meta property="og:description" content="How much does culture influence creative thinking?" />
-    <meta property="og:image" content="./img/someImage.jpg" />
+    <meta property="og:description" content="For more then a thousand years the Vikings has fascinated us with their heroic deeds 
+    and mythical travels. Welcome to embark upon a journey leading you through history to the end of the Iron Age." />
+    <meta property="og:image" content="./img/wollin_line.jpg" />
   </head>
   <body id="error">
     <header>
