--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <title>Start</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="./css/main.8e9a29d6.css">
+    <link rel="stylesheet" type="text/css" href="./css/main.ed8a4fe9.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
   
     <link rel="apple-touch-icon" sizes="57x57" href="./img/favicons/apple-icon-57x57.png">
@@ -25,8 +25,9 @@
     
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Skåne Lag" />
-    <meta property="og:description" content="How much does culture influence creative thinking?" />
-    <meta property="og:image" content="./img/someImage.jpg" />
+    <meta property="og:description" content="For more then a thousand years the Vikings has fascinated us with their heroic deeds 
+    and mythical travels. Welcome to embark upon a journey leading you through history to the end of the Iron Age." />
+    <meta property="og:image" content="./img/wollin_line.jpg" />
   </head>
   <body id="start">
     <header>
@@ -62,7 +63,11 @@
         <h2>Reenactment</h2>
         <img src="./img/viking-icon.svg"/>
         <h3>Vikings</h3>
-        <p>For more then a thousand years the Vikings has fascinated us with their heroic deeds and mythical travels. Their heritage is constantly precent and they still influence our modern world all around the globe. Welcome to embark upon a journey leading you through history to the end of the Iron Age. We are an reenactment group striving to recreate the everyday lives of the remarkable men and women who lived more than a thousand years ago. Whether it is through fighting or craftsmanship we try to relive the lives of the people we know as the Vikings. </p>
+        <p>For more then a thousand years the Vikings has fascinated us with their heroic deeds and mythical travels. 
+          Their heritage is constantly precent and they still influence our modern world all around the globe. Welcome to 
+          embark upon a journey leading you through history to the end of the Iron Age. We are an reenactment group striving to 
+          recreate the everyday lives of the remarkable men and women who lived more than a thousand years ago. Whether it is through 
+          fighting or craftsmanship we try to relive the lives of the people we know as the Vikings. </p>
         <div class="button-component">
           <a href="./reenactment.html">Learn More</a>
         </div>
@@ -72,7 +77,10 @@
       <div class="content">
         <h2>Hire Us</h2>
         <h3>Movies <span class="no-wrap">· Shows</span></h3>
-        <p>Skåne lag has a long experience of showcasing and mediating the Viking Age to a broad public, spanning from movies to educational school events. As fighters and craftspeople, we share knowledge and history in a living way, tangible for everyone. Our resume spans from fighting shows and events all across Europe to participating in large scale movie productions and documentaries.</p>
+        <p>Skåne lag has a long experience of showcasing and mediating the Viking Age to a broad public, spanning from 
+          movies to educational school events. As fighters and craftspeople, we share knowledge and history in a living way, tangible 
+          for everyone. Our resume spans from fighting shows and events all across Europe to participating in large scale movie productions 
+          and documentaries.</p>
         <div class="button-component">
           <a href="./hire-us.html">Learn More</a>
         </div>
