--- a/public/about.html
+++ b/public/about.html
@@ -3,7 +3,7 @@
     <title>About</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="./css/main.8e9a29d6.css">
+    <link rel="stylesheet" type="text/css" href="./css/main.ed8a4fe9.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
   
     <link rel="apple-touch-icon" sizes="57x57" href="./img/favicons/apple-icon-57x57.png">
@@ -25,8 +25,9 @@
     
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Skåne Lag" />
-    <meta property="og:description" content="How much does culture influence creative thinking?" />
-    <meta property="og:image" content="./img/someImage.jpg" />
+    <meta property="og:description" content="For more then a thousand years the Vikings has fascinated us with their heroic deeds 
+    and mythical travels. Welcome to embark upon a journey leading you through history to the end of the Iron Age." />
+    <meta property="og:image" content="./img/wollin_line.jpg" />
   </head>
   <body id="about">
     <header>
@@ -62,7 +63,14 @@
         <h2>Based in Malmö</h2>
         <img src="./img/viking-icon.svg"/>
         <h3>Skåne lag</h3>
-        <p>TEXT 9 (not done). Skåne lag is one of the oldest Viking societies in Sweden with a long experience of re-enactment and association work. Everyone is welcome to participate and we have a strict anti-discrimination policy. We are a non-profit organisation aiming to recreate the Viking period in the end of the Scandinavian Iron Age (8th to 12th century). Within the group we highlight the value of teamwork, friendship and an exchange of ideas and thoughts between members and other reenactors. Today the group has around 50 members who in different ways reconstruct the Viking culture. Skåne lag is based in Malmö in the south of Sweden. Here the fighters meet once a week to practice. During the summer, many of our members participate in different markets across the world. Skåne lag as an association is managed by a member-elected board who oversee the group, the economy and the policy.
+        <p>Skåne lag is one of the oldest Viking societies in Sweden with a long experience of re-enactment and association work. 
+          Everyone is welcome to participate and we have a strict anti-discrimination policy. We are a non-profit organisation 
+          aiming to recreate the Viking period in the end of the Scandinavian Iron Age (8th to 12th century). Within the group we 
+          highlight the value of teamwork, friendship and an exchange of ideas and thoughts between members and other reenactors. 
+          Today the group has around 50 members who in different ways reconstruct the Viking culture. Skåne lag is based in Malmö 
+          in the south of Sweden. Here the fighters meet once a week to practice. During the summer, many of our members participate 
+          in different markets across the world. Skåne lag as an association is managed by a member-elected board who oversee the group, 
+          the economy and the policy.
         </p>
       </div>
     </section>
@@ -71,7 +79,13 @@
       <div class="content">
         <h2>Training</h2>
         <h3>How to get started</h3>
-        <p>TEXT 10 (not done). One of Skåne lags main focuses is the Viking Age competitive combat, or fighting. This is a full body contact sport with blunted steal weapons. We aim to be as authentic as possible with our choice of weaponry, equipment and fighting styles. Everyone is welcome to join the weekly practice, regardless of prior experiences. As a beginner you train together with an instructor in order to learn the basics before practicing with the whole group. Skåne lag has a useful mentor system where everyone who want can choose a more experienced fighter to get extra help from. Together we aim to have a safe and fun atmosphere in the training hall.
+        <p> One of Skåne lags main focuses is the Viking Age competitive combat, or fighting. This is a full body contact 
+          sport with blunted steal weapons. We aim to be as authentic as possible with our choice of weaponry, equipment and 
+          fighting styles. Everyone is welcome to join the weekly practice, regardless of prior experiences. As a beginner you 
+          train together with an instructor in order to learn the basics before practicing with the whole group. Skåne lag has a 
+          useful mentor system where everyone who want can choose a more experienced fighter to get extra help from. Together we 
+          aim to have a safe and fun atmosphere in the training hall. We train Thusedays 19.00-21.00 at Stenkulaskolan in Malmö, 
+          contact us if your're intressted. 
         </p>
       </div>
     </section>
@@ -81,8 +95,13 @@
         <h2>Part of Jomsborg</h2>
         <img src="./img/viking-icon.svg"/>
         <h3>Jomsborg</h3>
-        <p>TEXT 11 (not done). Skåne lag is part of a worldwide living-history organisation called Jomsborg. The name comes from the Jomsvikings. These historical Viking warriors once made up a brotherhood spanning across the northern part of Europe in the late Iron Age. They had their stronghold on the island of Wolin in today’s Poland and figure in both archaeological and historical sources.
-The modern Jomsborg was founded in 1988 and today it includes over 30 groups, or lags. It is divided within five Storms, where Skåne lag is part of West Storm. The other ones include North Storm, East Storm, South Storm and Utland Storm. In true Viking spirit Jomsborg is lead by an elected Jarl. As with Skåne lag the whole of Jomsborg aims to recreate Viking Age culture in an authentic way where everyone is welcome.
+        <p>Skåne lag is part of a worldwide living-history organisation called Jomsborg. The name comes from the Jomsvikings. 
+          These historical Jomsvikings warriors once made up a brotherhood spanning across the northern part of Europe in the 
+          late Iron Age. They had their stronghold on the island of Wolin in today’s Poland and figure in both archaeological 
+          and historical sources. The modern Jomsborg was founded in 1988 and today it includes over 30 groups, or lags. 
+          It is divided within five Storms, where Skåne lag is part of West Storm. The other ones include North Storm, East Storm, 
+          South Storm and Utland Storm. In true Viking spirit Jomsborg is lead by an elected Jarl. As with Skåne lag the whole of 
+          Jomsborg aims to recreate Viking Age culture in an authentic way where everyone is welcome.
         </p>
         <div class="button-component">
           <a href="http://www.jomsborg.com">To Jomsborg</a>
