Fix image position and slider bug

--- a/public/reenactment.html
+++ b/public/reenactment.html
@@ -3,7 +3,7 @@
     <title>Reenactment</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="./css/main.ed8a4fe9.css">
+    <link rel="stylesheet" type="text/css" href="./css/main.c97a396f.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
   
     <link rel="apple-touch-icon" sizes="57x57" href="./img/favicons/apple-icon-57x57.png">
@@ -76,7 +76,7 @@
         <div class="images">
             <div class="sliding-element active">
               <div class="image-overlay"></div>
-              <div class="image" style="background-image:url(./img/horse.jpg);"></div>
+              <div class="image " style="background-image:url(./img/horse.jpg);"></div>
               <div class="content">
                   <h3>Vikings</h3>
                   <p>Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.</p>
@@ -84,7 +84,7 @@
             </div>
             <div class="sliding-element ">
               <div class="image-overlay"></div>
-              <div class="image" style="background-image:url(./img/market.jpg);"></div>
+              <div class="image " style="background-image:url(./img/market.jpg);"></div>
                   <div class="video-component" data-video-id="lXRfzcWN0jk">
                     <div class="video-play-icon">
                       <img src="./img/play.svg">
@@ -106,7 +106,7 @@
             </div>
             <div class="sliding-element ">
               <div class="image-overlay"></div>
-              <div class="image" style="background-image:url(./img/prepare_for_battlle.jpg);background-position: top left;"></div>
+              <div class="image l-top-left" style="background-image:url(./img/prepare_for_battlle.jpg);"></div>
               <div class="content">
                   <h3>Vikings</h3>
                   <p>Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.</p>
@@ -114,7 +114,7 @@
             </div>
             <div class="sliding-element ">
               <div class="image-overlay"></div>
-              <div class="image" style="background-image:url(./img/wollin.jpg);background-position: top left;"></div>
+              <div class="image l-top-left" style="background-image:url(./img/wollin.jpg);"></div>
                   <div class="video-component" data-video-id="oNEW4qPacGw">
                     <div class="video-play-icon">
                       <img src="./img/play.svg">
@@ -136,7 +136,7 @@
             </div>
             <div class="sliding-element ">
               <div class="image-overlay"></div>
-              <div class="image" style="background-image:url(./img/pray.jpg);background-position: top left;"></div>
+              <div class="image l-top-left" style="background-image:url(./img/pray.jpg);"></div>
               <div class="content">
                   <h3>Vikings</h3>
                   <p>Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.</p>
